[package]
name = "rp2040-test2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
cyw43 = "0.5.0"
cyw43-firmware = { version = "0.1.0", features = ["wifi"] }
cyw43-pio = "0.8.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-interrupt", "executor-thread"] }
embassy-net = { version = "0.7.1", features = ["dhcpv4-hostname", "dns", "medium-ip", "proto-ipv4", "tcp"] }
embassy-rp = { version = "0.8.0", features = ["boot2-generic-03h", "binary-info", "critical-section-impl", "rp2040", "time-driver"] }
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embassy-usb-logger = "0.5.1"
log = "0.4.28"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
static_cell = "2.1.1"
